# deen-backend

./: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.dev  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  scratch_check_users.py  translations.json
alembic/: env.py
alembic/versions/: 001f167c4da0_phase4_habits.py  06c404963226_phase9_health.py  0ab0a33f2849_phase2_prayer_ecosystem.py  0e8dab9bee04_phasse3_quran.py  12f917f468fc_batch1_mosque_finder.py  19a61fcebe2b_phase9_learning_hub.py  239c368a13de_init.py  5af12ab19050_phase10_admin_check.py  7dddea7a4d77_phase_6_and_8_scholar_qa_circles_.py  a1b2c3d4e5f6_lovable_plan_quran_extensions.py  b0de3f62bbaa_phase5_journal_insights.py  b6e9ec4c0396_add_admin_2fa_fields.py  c952a32d4781_phase7_gamification.py
app/: __init__.py  main.py
app/core/: config.py  database.py  dependencies.py  security.py
app/models/: __init__.py  ai.py  child.py  community.py  family.py  female.py  finance.py  gamification.py  habit.py  health.py  journal.py  learning.py  meal.py  prayer.py  quran.py  recitation.py  task.py  user.py  workout.py
app/repositories/: __init__.py  base.py  habit.py  prayer.py  quran.py  repos.py  user.py  v2.py
app/routers/: __init__.py  admin.py  ai.py  auth.py  child.py  community.py  cycle_sync.py  family.py  female.py  finance.py  gamification.py  habits.py  health.py  journal.py  learning.py  meal.py  qibla.py  (+7 more)
data/: clear_quran.json
tests/: conftest.py  test_phase2_prayer.py  test_phase3_quran.py  test_phase4_habits.py  test_phase5_journal.py  test_v2.py
(+35 files in other folders)
